# python-fp-course

./: .gitignore  README.md  pyproject.toml
fp/: __main__.py  customer.py  order.py  order_item.py
scratch/: __main__.py
